--- a/src/components/SideBar/Header/UserMenu/DropDown/DropDown.module.scss
+++ b/src/components/SideBar/Header/UserMenu/DropDown/DropDown.module.scss
@@ -1,8 +1,8 @@
 .dropDown {
   font-family: 'Inter';
   position: absolute;
-  top: 3.9rem;
-  right: 0.6rem;
+  top: 3rem;
+  right: 0.3rem;
   width: 200px;
   padding: 15px;
   border-radius: 8px;
@@ -12,7 +12,7 @@
   li {
     list-style-type: none;
     display: flex;
-    padding: 5px;
+
   }
 
   ul {
@@ -23,6 +23,7 @@
     text-decoration: none;
     color: #565555;
     margin-left: 10px;
+    font-size: 15px;
   }
 
   .dropDown__user {
